--- a/resources/html/base.html
+++ b/resources/html/base.html
@@ -10,67 +10,8 @@
         
         {# don't request a favicon #}
         <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-        {{ sheet | safe }}
-        <style>
-            #v-toggle { display:none; }
-            .v-dot {
-                background-color:#09af00;
-                border-radius:100px;
-                width:10px;
-                height:10px;
-                align-self:center;
-                margin-right:5px;
-            }
-            .v-dot.v-inactive {
-                background-color:lightgray;
-            }
-            #v-toggle + label > div button {
-                border:none;
-                background-color:transparent;
-                cursor:pointer;
-                flex-grow:1;
-                text-align:left;
-            }
-            #v-toggle + label > div > form {
-                padding:5px;
-                display:flex;
-                align-items:baseline;
-            }
-            #v-toggle + label > div form:hover {
-                background-color:rgba(0,0,0,0.1);
-            }
-            #v-toggle + label > div > a:last-child {
-                color:gray;
-                align-self:end;
-            }
-            #v-toggle + label > div > a:last-child:hover {
-                background-color:transparent;
-                text-decoration:underline;
-            }
-            #v-toggle + label {
-                user-select: none;
-            }
-            #v-toggle + label > div {
-                user-select: none;
-                margin:10px 0 0 -6px;
-                padding:5px;
-                border-radius: 3px;
-                border:1px solid gray;
-                background-color:white;
-                position:absolute;
-                display:none;
-                color:black;
-                box-shadow:5px 5px 5px rgba(0,0,0,0.1);
-            }
-            #v-toggle:checked + label {
-                background-color:rgba(255,255,255,0.95);
-                color:black;
-            }
-            #v-toggle:checked + label > div {
-                display:flex;
-                flex-direction:column;
-            }
-        </style>
+        
+        <style>{{ styles | safe }}</style>
     </head>
     <body>
         <div class="page l r col">
@@ -91,7 +32,7 @@
                                 <button>{{view.1}}</button>
                             </form>
                             {% else %}
-                            <form action="/api/v1/views/update?redirect={{route}}" method="post">
+                            <form action="/api/v1/views/update?redirect={{route | urlencode}}" method="post">
                                 <div class="v-dot v-inactive">&nbsp;</div>
                                 <input type="hidden" name="value" value="{{view.0}}"/>
                                 <button>{{view.1}}</button>
@@ -142,7 +83,6 @@
             </nav>
         </div>
 
-        {% block script %}
-        {% endblock script %}
+        <script>{{ scripts | safe }}</script>
     </body>
 </html>
