--- a/resources/html/profile/friends.html
+++ b/resources/html/profile/friends.html
@@ -1,33 +1,42 @@
 {% extends 'profile/base.html' %}
 
 {% block body %}
-    <div>
-        <div class="col">
-        <h3>Friends</h3>
-        {% if friends %}
-            {% for friend in friends %}
-                <div>{{friend.name}}</div>
-            {% endfor %}
-        {% else %}
-            No Friends
-        {% endif %}
+    <div class="row">
+        <div class="col w20 l10">
+            <h3>Requests</h3>
+            {% if requests %}
+                {% for request in requests %}
+                    <div class="friend__request p5 row">
+                        <div>{{request.name}}</div>
+                        <form class="l10" action="/api/v1/friend/update?redirect={{route | urlencode}}" method="post">
+                            <input type="hidden" name="accepted" value="true"/>
+                            <button class="clickable" type="submit" name="value" value="{{request.id}}">Accept</button>
+                        </form>
+                    </div>
+                {% endfor %}
+            {% else %}
+                <div class="friend__request p5">
+                    No Requests
+                </div>
+            {% endif %}
         </div>
 
-        <div class="col">
-        <h3>Requests</h3>
-        {% if requests %}
-            {% for request in requests %}
-                <div class="friend__request">
-                    {{request.name}}
-                    <form action="/api/v1/friend/update?redirect={{route | urlencode}}" method="post">
-                        <input type="hidden" name="accepted" value="true"/>
-                        <button class="clickable" type="submit" name="value" value="{{request.id}}">Accept</button>
-                    </form>
+        <div class="col x1 l10">
+            <h3>Friends</h3>
+            {% if friends %}
+                {% for friend in friends %}
+                    <div class="friend__card p5">
+                        {{friend.name}}
+                        <form class="l10" action="/api/v1/friend/delete?redirect={{route | urlencode}}" method="post">
+                            <button class="clickable" type="submit" name="value" value="{{friend.id}}">Unfriend</button>
+                        </form>
+                    </div>
+                {% endfor %}
+            {% else %}
+                <div class="friend__card p5">
+                    No Friends
                 </div>
-            {% endfor %}
-        {% else %}
-            No Requests
-        {% endif %}
+            {% endif %}
         </div>
     </div>
 {% endblock body %}
