--- a/resources/html/profile/feed.html
+++ b/resources/html/profile/feed.html
@@ -7,17 +7,16 @@
     {% if posts %}
         {% for post in posts %}
             <article class="card col p10 m5">
-                <h1 class="m5 p5">
+                <a href="/posts/{{post.id}}" class="post__title m5 p5">
                     {{ post.title }}
-                </h1>
+                </a>
                 <div class="m5 p10">
                     {{ post.body|safe }}
                 </div>
                 <nav class="row m5 p5 f1">
-                    <span class="">
-                    {{ post.created | date(format="%d/%m/%g %l:%M %P") }}</span> 
+                    <span class="">{{ post.created | date(format="%d/%m/%g %l:%M %P") }}</span> 
                     {% if post.view_id == session.view %}
-                    <form action="/api/v1/posts/delete?redirect=/profile/feed" method="post" class="l">
+                    <form action="/api/v1/posts/delete?redirect={{route | urlencode}}" method="post" class="l">
                         <input type="hidden" name="value" value="{{post.id}}"/>
                         <button class="btn-med" type="submit">delete</button>
                     </form>
