--- a/resources/html/profile/feed.html
+++ b/resources/html/profile/feed.html
@@ -7,7 +7,7 @@
     {% if posts %}
         {% for post in posts %}
             <article class="card col p10 m5">
-                <a href="/posts/{{post.id}}" class="post__title m5 p5">
+                <a href="/post/{{post.id}}" class="post__title m5 p5">
                     {{ post.title }}
                 </a>
                 <div class="m5 p10">
