Fixed minor annoyances on the profile/write page

--- a/resources/html/profile/base.html
+++ b/resources/html/profile/base.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 <nav class="profile__menu row">
-    <a class="p5 f1 l5" href="/profile/write">Post</a>
-    <a class="p5 f1 l5" href="/profile/feed">Feed</a>
-    <a class="p5 f1 l5" href="/profile/messages">Messages</a>
-    <a class="p5 f1 l5" href="/profile/friends">Friends</a>
-    <a class="p5 f1 l5" href="/profile/settings">Settings</a>
+    <a class="clickable p5 f1 l5" href="/profile/write">Post</a>
+    <a class="clickable p5 f1 l5" href="/profile/feed">Feed</a>
+    <a class="clickable p5 f1 l5" href="/profile/messages">Messages</a>
+    <a class="clickable p5 f1 l5" href="/profile/friends">Friends</a>
+    <a class="clickable p5 f1 l5" href="/profile/settings">Settings</a>
     {% if flash %}
     <div class="l p5 f1 r5">
         {{flash}}
