--- a/resources/html/profile/settings.html
+++ b/resources/html/profile/settings.html
@@ -23,14 +23,24 @@
         </form>
     </div>
     <div class="section">
-        <h1 class="section__title m5">Current</h1>
-        <p>Profile settings for the current view.</p>
+        <h1 class="section__title m5">Profile</h1>
+        <p>Profile for the current view.</p>
         <h2>Description</h2>
         <p>
             Description
         </p>
         <form class="description__form">
             <input type="text" name="description" value=""/>
+            <button type="submit">Update</button>
+        </form>
+    </div>
+    <div class="section">
+        <h1 class="section__title m5">Options</h1>
+        <p>Options for the current view.</p>
+        <form class="options__form">
+            <label>Tab key inserts tab when typing: 
+            <input type="checkbox" name="tabs" value=""/></label>
+            <br/>
             <button type="submit">Update</button>
         </form>
     </div>
