--- a/resources/html/public/comment.html
+++ b/resources/html/public/comment.html
@@ -10,12 +10,10 @@
 
 <div class="comment">
     <article>
-        <a class="crumb__top" href="/post/{{comment.post}}">top</a>
-        {% for crumb in crumbs %}
-            {% set breadcrumbs = crumbs | slice(end=loop.index0) | join(sep=",") %}
-            > <a class="crumb__previous" href="/comment/{{crumb}}?breadcrumb={{ breadcrumbs }}">{{crumb}}</a>
-        {% endfor %}
-        > <span class="crumb__current">{{comment.id}}</span>
+        {{ macros::breadcrumbs(
+            top    = comment.post,
+            crumbs = crumbs,
+            bottom = comment.id) }}
 
         <h2 class="comment__author">
             {% if comment.body %}
@@ -31,6 +29,7 @@
             {{ comment.created | date(format="%d/%m/%g %l:%M %P") }}
         </div>
     </article>
+    
     <form class="comment__write col" action="/api/v1/comment/create?redirect={{ url }}" method="post">
         <input type="hidden" name="post" value="{{comment.post}}"/>
         <input type="hidden" name="parent" value="{{comment.id}}"/>
@@ -48,8 +47,7 @@
                     {% if session and child.author == session.view %}
                         <a class="l10" href="/api/v1/comment/delete?id={{child.id}}&redirect={{ url | urlencode }}">delete</a>
                     {% endif %}
-                    {% set breadcrumbs = crumbs | concat(with=comment.id) | join(sep=",") %}
-                    <a class="l10" href="/comment/{{child.id}}?breadcrumb={{ breadcrumbs }}">open</a>
+                    <a class="l10" href="/comment/{{child.id}}">open</a>
                 </div>
             </div>
         {% endfor %}
