--- a/resources/html/profile/feed.html
+++ b/resources/html/profile/feed.html
@@ -1,4 +1,5 @@
 {% extends 'profile/base.html' %}
+{% import "macros.html" as macros %}
 
 {% block body %}
 <div class="row x1">
@@ -18,7 +19,7 @@
                     {% if post.view_id == session.view %}
                     <form action="/api/v1/posts/delete?redirect={{route | urlencode}}" method="post" class="l">
                         <input type="hidden" name="value" value="{{post.id}}"/>
-                        <button class="btn-med" type="submit">delete</button>
+                        <button class="clickable" type="submit">delete</button>
                     </form>
                     {% endif %}
                 </nav>
@@ -30,8 +31,23 @@
     </div>
 
     {# FOR SUBSCRIBED - REVERSE CHRONO #}
-    <div class="col x1 w50">
-        <span class="p10 l r">Nothing here!</span>
+    <div class="tabs x1 w50">
+        <input id="tab__friends" type="radio" name="tab" checked>
+        <input id="tab__followed" type="radio" name="tab">
+
+        <label for="tab__friends" class="tab__label label__friends">Friends</label>
+        <label for="tab__followed" class="tab__label label__followed">Followed</label>
+
+        <div class="tab__content friends">
+        {% for pair in friends %}
+            {{pair.0.name}}: {{pair.1.title}}
+        {% endfor %}
+        </div>
+        <div class="tab__content followed">
+        {% for pair in followed %}
+            {{pair.0.name}}: {{pair.1.title}}
+        {% endfor %}
+        </div>
     </div>
 </div>
 {% endblock body %}
